--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/registration
 spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.password=2351
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
